@@ -1,5 +1,6 @@
 = ActiveMerchant CHANGELOG
 
+* Update TransFirst to support avs and cvv data. Remove test_result_from_cc_number. [cody]
 * Maintain backwards compatibility with :address option for now in the Payflow gateways [cody]
 * Remove test_result_from_cc_number from SecurePayTech. Improve unit test coverage [cody]
 * Fix email option in PayflowGateway. Remove support for :address option. :billing_address and :shipping_address must now be passed in separately. [cody]
